backend auth API listo para producción

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,62 +3,44 @@ name: Deploy API to Hetzner
 on:
   push:
     branches:
-      - main
+      - main  # Ejecutar solo cuando haya push a main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Usar un runner de Ubuntu para ejecutar el flujo
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v3  # Descargar el código fuente
 
     - name: Set up Java
       uses: actions/setup-java@v3
       with:
-        java-version: '21'
+        java-version: '21'       # Versión de Java usada en el build
         distribution: 'temurin'
 
     - name: Build with Maven
-      run: mvn clean package -DskipTests
+      run: mvn clean package -DskipTests  # Construir el JAR, sin ejecutar tests
 
     - name: Rename JAR for consistent deployment
-      run: mv target/*.jar backend-auth.jar
+      run: mv target/*.jar mifinca-backend-auth.jar  # Renombrar el JAR generado
 
-    - name: Copy JAR and .env to server
+    - name: Copy JAR to VPS
       uses: appleboy/scp-action@v0.1.4
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER_NAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
+        host: ${{ secrets.SERVER_HOST }}              # IP del VPS
+        username: ${{ secrets.SERVER_USER_NAME }}     # Usuario en el VPS
+        key: ${{ secrets.SERVER_SSH_KEY }}            # Clave privada SSH
         port: 22
-        source: "backend-auth.jar,.env"
-        target: ${{ secrets.SERVER_DEPLOY_PATH }}
+        source: "mifinca-backend-auth.jar"            # Solo se envía el JAR
+        target: ${{ secrets.SERVER_DEPLOY_PATH }}    
 
-    - name: Crear y reiniciar servicio systemd
+    - name: Ejecutar script remoto para mover JAR, crear servicio y reiniciar
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER_NAME }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
-          sudo bash -c 'cat > /etc/systemd/system/backend-auth-api.service << EOL
-[Unit]
-Description=Backend Auth API
-After=network.target
-
-[Service]
-User=gabriel
-WorkingDirectory=${{ secrets.SERVER_DEPLOY_PATH }}
-ExecStart=/usr/bin/java -jar ${{ secrets.SERVER_DEPLOY_PATH }}/backend-auth.jar --spring.config.location=${{ secrets.SERVER_DEPLOY_PATH }}/.env
-SuccessExitStatus=143
-Restart=always
-RestartSec=10
-
-[Install]
-WantedBy=multi-user.target
-EOL'
-
-          sudo systemctl daemon-reload
-          sudo systemctl enable backend-auth-api.service
-          sudo systemctl restart backend-auth-api.service
+          chmod +x /home/gabriel/scripts/mifinca-deploy-auth.sh
+          /home/gabriel/scripts/mifinca-deploy-auth.sh
