--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=backend-auth
+spring.application.name=mifinca-backend-auth
 
 #Puerto de la app
 server.port=8080
@@ -10,6 +10,12 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Configuracion de JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Log file output
+logging.file.name=${LOGGING_FILE_NAME}
+
+# Opcional: Nivel de logs por defecto (INFO es estándar para producción)
+logging.level.root=INFO
