ci: evitar ejecución de tests en producción con -Dmaven.test.skip=true

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         distribution: 'temurin'
 
     - name: Build with Maven
-      run: mvn clean package -DskipTests  # Construir el JAR, sin ejecutar tests
+      run: mvn clean package -Dmaven.test.skip=true
 
     - name: Rename JAR for consistent deployment
       run: mv target/*.jar mifinca-backend-auth.jar  # Renombrar el JAR generado
