feat(config): detectar entorno local o producción y cargar .env según corresponda

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Configuracion de JPA
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Log file output
 logging.file.name=${LOGGING_FILE_NAME}
 
-# Opcional: Nivel de logs por defecto (INFO es estándar para producción)
+# Opcional: Nivel de logs por defecto (INFO es estandar para produccion)
 logging.level.root=INFO
