--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=mifinca-backend-auth
 
 #Puerto de la app
 server.port=8080
+server.address=127.0.0.1
+
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
 
 #Configuracion de la base de datos remota
